--- a/index.html
+++ b/index.html
@@ -1,7 +1,45 @@
 <!DOCTYPE html>
 <html>
-    <body>
-        <h1>Hello World</h1>
-        <p>I'm hosted with GitHub Pages.</p>
-    </body>
+<head>
+    <title>My GitHub Pages Site</title>
+    <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.5.2/css/bootstrap.min.css">
+    <link rel="stylesheet" href="/assets/css/style.css">
+</head>
+<body>
+    <nav class="navbar navbar-expand-lg navbar-light bg-light">
+        <a class="navbar-brand" href="#">MySite</a>
+        <div class="collapse navbar-collapse">
+            <ul class="navbar-nav mr-auto">
+                <li class="nav-item"><a class="nav-link" href="#home" onclick="showSection('home')">Home</a></li>
+                <li class="nav-item"><a class="nav-link" href="#about" onclick="showSection('about')">About</a></li>
+                <li class="nav-item"><a class="nav-link" href="#experience" onclick="showSection('experience')">Experience</a></li>
+                <li class="nav-item"><a class="nav-link" href="#blog" onclick="showSection('blog')">Blog</a></li>
+                <li class="nav-item"><a class="nav-link" href="#contact" onclick="showSection('contact')">Contact</a></li>
+            </ul>
+        </div>
+    </nav>
+    <div class="container">
+        <div id="home" class="section">
+            <h1>Hello World</h1>
+            <p>I'm hosted with GitHub Pages.</p>
+        </div>
+        <div id="about" class="section" style="display:none;">
+            <h2>About Me</h2>
+            <p>Here is my biography.</p>
+        </div>
+        <div id="experience" class="section" style="display:none;">
+            <h2>Experience</h2>
+            <p>Details of my experience.</p>
+        </div>
+        <div id="blog" class="section" style="display:none;">
+            <h2>Blog</h2>
+            <p>My blog posts will go here.</p>
+        </div>
+        <div id="contact" class="section" style="display:none;">
+            <h2>Contact</h2>
+            <p>Contact me at email@example.com.</p>
+        </div>
+    </div>
+    <script src="/assets/js/script.js"></script>
+</body>
 </html>
