--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
     <nav class="navbar navbar-expand-lg navbar-light bg-light">
         <a class="navbar-brand" href="#">MySite</a>
         <div class="collapse navbar-collapse">
-            <ul class="navbar-nav mr-auto">
+            <ul class="navbar-nav ml-auto">
                 <li class="nav-item"><a class="nav-link" href="#home" onclick="showSection('home')">Home</a></li>
                 <li class="nav-item"><a class="nav-link" href="#about" onclick="showSection('about')">About</a></li>
                 <li class="nav-item"><a class="nav-link" href="#experience" onclick="showSection('experience')">Experience</a></li>
